change deep q learning action space

--- a/tex_report/report.tex
+++ b/tex_report/report.tex
@@ -328,6 +328,8 @@ Investigate relationship between $\gamma$ and the difference between potential s
 % \item Introduce ESS Games, and mention how our variety cares about how many pieces get promoted rather than whether any piece gets promoted.
 %  \item Proofs about random defenders, splitting lemma etc (from previous type-up).
 %  \item Learn to make LaTeX bibliographies.
+%  \item Learn to make use of Amazon Web Server.
+%  \item Change >= to \geq
 %\end{enumerate}
 
 \end{document}
